# GrowBikeNet

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  GrowBikeMVP-mainfunc.ipynb  GrowBikeMVP.ipynb  README.md  environment-dev.yml  environment.yml  pre-commit-config.yaml  pyproject.toml  release-please-config.json  setup.py
.github/workflows/: docs.yml  docs_rebuild.yml  publish.yml  sphinx.yml  test.yml
GrowBikeNet/: __init__.py  functions.py
docs/: api.rst  changelog.md  conf.py  contributing.rst  index.rst  reference_developer.rst  reference_user.rst  requirements.txt
docs/_build/doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree  references.doctree
docs/_build/doctrees/api/: GrowBikeNet.functions.doctree  GrowBikeNet.functions.get_seed_points.doctree  GrowBikeNet.functions.intersects_properly.doctree
docs/_build/doctrees/nbsphinx/usage/: GrowBikeMVP.ipynb
docs/_build/doctrees/usage/: GrowBikeMVP.doctree  installation.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  api.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt
docs/_build/html/_sources/api/: GrowBikeNet.functions.rst.txt
docs/_build/html/api/: GrowBikeNet.functions.get_seed_points.html  GrowBikeNet.functions.html  GrowBikeNet.functions.intersects_properly.html
docs/_build/html/usage/: GrowBikeMVP.html  installation.html  quickstart.html
docs/_static/: references.bib
docs/api/: GrowBikeNet.functions.get_seed_points.rst  GrowBikeNet.functions.intersects_properly.rst  GrowBikeNet.functions.node_to_edge_attributes.rst  GrowBikeNet.functions.rst  growbikenet.functions.get_grid_seed_points.rst  growbikenet.functions.get_seed_points.rst  growbikenet.functions.intersects_properly.rst  growbikenet.functions.node_to_edge_attributes.rst  growbikenet.functions.rst  growbikenet.growbikenet.rst
docs/source/: changelog.md  conf.py  getting_started.rst  index.rst  installation.rst  mwe.ipynb  reference_developer.rst  reference_user.rst  references.rst  usage.ipynb  usage.rst  usage_01_seed_points.ipynb  usage_02_network_growth.ipynb  usage_03_existing_bike_network.ipynb  usage_04_data_export_and_visualization.ipynb  usage_05_custom_data_imports.ipynb
docs/source/_static/: references.bib
docs/source/usage/: getting_started.rst  installation.rst
docs/usage/: GrowBikeMVP.ipynb  getting_started.rst  installation.rst  mwe.ipynb  quickstart.rst
examples/: batchexport_onecity.py  development.py  exportalldata_onecity.py  mwe.ipynb  mwe.py
growbikenet/: __init__.py  _version.py  constants.py  functions.py  growbikenet.py  settings.py  visualization.py  visualizations.py
src/: functions.py  visualizations.py
tests/: test_functions.py  test_intersect.py  test_main.py  test_rank.py
tests/test_data/: a_edges.gpkg  athens_bike_network.gpkg  athens_city_boundary.gpkg  athens_growbikenet_with-bikenw.gpkg  oelde_grid.gpkg  oelde_growbikenet.gpkg  oelde_seed_points.gpkg  oelde_streets.gpkg
