[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "growbikenet"
version = "0.8.1"
authors = [
  { name = "Manuel Knepper" },
  { name = "Anastassia Vybornova" },
  { name = "Michael Szell" },
]
maintainers = [{ name = "Manuel Knepper", email = "manuel.knepper@gmx.net" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "BikeNetKit Python package to grow urban bicycle networks"
keywords = ["Bicycle network planning", "Networks", "OpenStreetMap", "Urban Planning", "Urban Mobility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14",
    "matplotlib",
    "osmnx>=1.9.4",
    "geojson",
    "tqdm",
    "pip",
    "momepy",
    "opencv-python",
    "python-slugify",
]

[project.urls]
Repository = "https://github.com/BikeNetKit/GrowBikeNet"
Issues = "https://github.com/BikeNetKit/GrowBikeNet/issues"

[project.optional-dependencies]
test = ["pytest"]
doc = ["sphinx", "momepy"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]  # "Imported but unused: happens with packages

[tool.setuptools.packages.find]
exclude = [
    "examples*",
    "tests*",
    "results",
    "docs*",
    "data*",
    "scripts*",
]
namespaces = false
