[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "growbikenet"
version = "0.10.2"
authors = [
    { name = "Michael Szell", email = "michael@szell.net"},
    { name = "Manuel Knepper"},
    { name = "Anastassia Vybornova"},
]
maintainers = [
    { name = "Michael Szell", email = "michael@szell.net"},
    { name = "Manuel Knepper", email = "manuel.knepper@gmx.net"},
]
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "BikeNetKit Python package to grow urban bicycle networks"
keywords = ["Bicycle network planning", "Networks", "OpenStreetMap", "Urban Planning", "Urban Mobility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14",
    "matplotlib",
    "osmnx>=1.9.4",
    "geojson",
    "tqdm",
    "pip",
    "momepy",
    "opencv-python",
    "python-slugify",
]

[project.urls]
Homepage = "https://bikenetkit.org/"
Documentation = "https://bikenetkit.github.io/GrowBikeNet/"
Repository = "https://github.com/BikeNetKit/GrowBikeNet"
Issues = "https://github.com/BikeNetKit/GrowBikeNet/issues"
Changelog = "https://github.com/BikeNetKit/GrowBikeNet/blob/main/docs/changelog.md"

[project.optional-dependencies]
test = ["pytest"]
doc = ["sphinx", "momepy"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]  # "Imported but unused: happens with packages

[tool.setuptools.packages.find]
exclude = [
    "examples*",
    "tests*",
    "results",
    "docs*",
    "data*",
    "scripts*",
]
namespaces = false
